Changelog for Miosix np embedded OS

- Fixed a bug in STM32Serial: the position of the PPRE1 and PPRE2 bitfields
  in RCC->CFGR varies from device family. This was causing incorrect baudrate
  settings in some configurations.
- Added support for RTS/CTS hardware flow control to STM32 serial ports
- Added class DynUnsyncQueue to kernel/queue.h, a new circular buffer with its
  storage heap allocated.
- Breaking change: refactored the interface of class BufferQueue, and removed
  its header file. Added header kernel/queue.h with all the varius FIFO data
  structures in the kernel.
- Breaking change: serial port drivers used to have a read function to read
  a buffer of data that would return a buffer with exactly the asked size
  of data. Now they return up to that size, but if an idle line is found
  they may return less. This change is exploited in the TerminalDevice class
  to read data a buffer at a time, and not one character at a time, so all
  serial driver must implement this behaviour, or reading from serial port
  won't work as expected. Both STM32 and LPC2000 driver have been upgraded.
- bootlog() and errorLog() now support format strings.
- Unified stm32f1 and stm32f2,f4,l1 serial port drivers. Now the
  driver for USART1 is DMA based also on the stm32f2 and f4.
- Fixed makefile dependencies to allow Miosix parallel builds with
  make -j4, make -j8, ... to speed up compilation on multicores.
- Restored support for DCC. It broke somewhere when transitioning to the
  new Device-based serial port drivers. Removed DCC support on stm32f4 as,
  due to OpenOCD limitations, it never actually worked.
- Removed the console interface (file interfaces/console.h).
- Factorized common code in the various stm32 serial port drivers. Work
  is still ongoing, as stm32f1 still has a different driver, and since
  DMA mode needs to be implemented.
- Fixed a null pointer dereference in Queue class.
- Fixed compiling kernel without WITH_FILESYSTEM