@@ -1,5 +1,8 @@
 Changelog for Miosix np embedded OS
 
+- Added -f option to rm in Makefile and miosix/Makefile, so that when
+  doing make clean on an already clean directory, no errors are reported
+- Added DMA RX for USART1 un STM32Serial. Also fixed bugs on stm32f1.
 - Fixed a bug in STM32Serial: the position of the PPRE1 and PPRE2 bitfields
   in RCC->CFGR varies from device family. This was causing incorrect baudrate
   settings in some configurations.
